# r_os

./: Cargo.toml  README.md  linker.ld
.cargo/: config  config.toml
src/: boot.s  main.rs  modules.rs
src/modules/: uart.rs
src/modules/gpu/: gpu.rs
src/modules/memory/: buffer.rs
src/modules/shell/: proto_shell.rs
src/modules/uart/: uart.rs  uart_config.rs  uart_mini.rs  uart_pl011.rs
