[package]
name = "r_os"
version = "0.1.0"
edition = "2018"
authors = ["Robert Starosta (@SonicSong)"]

[[bin]]
name = "r_os"
path = "src/main.rs"
test = false
doctest = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9.1"
safe-mmio = "0.2.5"
smccc = "0.2.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
